Created attachment 28523 [details] patch adding a call to apr_socket_close In the function proxy_connect_handler, most of the error-handling code calls apr_socket_close. This patch adds it in the case where it is missing.
Fixed in r1832348. Thx for the report, and sorry for the really long delay. Maybe it's time to add some error handling gotos in apache, Linux style :)
Backported to v2.4.47.